--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/tm-pe2/ad-data#readme",
   "devDependencies": {
     "@faker-js/faker": "^7.1.0"
+  },
+  "dependencies": {
+    "pg": "^8.7.3"
   }
 }
