--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ad-data",
   "version": "1.0.0",
   "description": "Creating dummy data for database.",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
     "start": "npm run serve",
     "serve": "nodemon",
@@ -23,5 +23,12 @@
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/pg": "^8.6.5",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.1",
+    "pg": "^8.7.3"
   }
 }
