--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@types/bcrypt": "^5.0.0",
     "@types/pg": "^8.6.5",
     "bcrypt": "^5.0.1",
+    "csv-parse": "^5.1.0",
     "dotenv": "^16.0.1",
+    "fast-csv": "^4.3.6",
     "pg": "^8.7.3"
   }
 }
