--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/tm-pe2/ad-data#readme",
   "devDependencies": {
     "@faker-js/faker": "^7.1.0",
+    "@types/node-fetch": "^2.6.1",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
@@ -31,6 +32,7 @@
     "csv-parse": "^5.1.0",
     "dotenv": "^16.0.1",
     "fast-csv": "^4.3.6",
+    "node-fetch": "^2.6.1",
     "pg": "^8.7.3"
   }
 }
